tests/tests/ui/relation_has_one_requires_attr.stderr
error[E0277]: the trait bound `toasty::HasOne<Option<Profile>>: toasty::stmt::Primitive` is not satisfied
 --> tests/ui/relation_has_one_requires_attr.rs:9:14
  |
9 |     profile: toasty::HasOne<Option<Profile>>,
  |              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ the trait `toasty::stmt::Primitive` is not implemented for `toasty::HasOne<Option<Profile>>`
  |
  = help: the following other types implement trait `toasty::stmt::Primitive`:
            Arc<T>
            Box<T>
            Cow<'_, T>
            Option<T>
            Rc<T>
            bigdecimal::BigDecimal
            bool
            i16
          and $N others
